tools/grammar/hdl-grammar.txt
chip_spec => "CHIP" INDENTIFIER "{" header body "}" 
header => "IN" chip_io ";" "OUT" chip_io ";"
chip_io => (INDENTIFIER | bus) ("," (INDENTIFIER | bus))*
bus => INDENTIFIER "[" NUMBER "]"
body => "PARTS" ":" internal_parts
internal_parts => part ";" (part ";")*
part => INDENTIFIER "(" connections ")"
connections => connection connection ("," connection)*
connection => (INDENTIFIER | sub_bus) "=" (INDENTIFIER | sub_bus | ("0" | "1"))
sub_bus => INDENTIFIER "[" (NUMBER | range) "]"
